-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.8
-
None
-
-
6ee5fcc45 (dev), e205edfff (dev)
There are some properties, such as text stroke and complex foreground brushes (gradients for instance) which are not part of the HTML produced by QTextDocument. This means that documents using these properties cannot be saved to disk and then restored faithfully.
There may not be HTML/CSS to handle these cases, but for similar properties we have previously added "-qt" prefixes, similar to how webkit has added support for text stroke with its own special CSS tags: https://css-tricks.com/adding-stroke-to-web-text/
We could do the same for foreground gradients and strokes.